# project-template

./: .gitignore  README.md  pyproject.toml
.github/scripts/: _discord_common.py  notify_discord.py  notify_github_events.py
.github/scripts/pr_review/: __init__.py  comment_poster.py  config.py  diff_fetcher.py  gemini_reviewer.py  main.py
.github/workflows/: notify-discord-events.yml  pr-review.yml  template-sync.yml  update-dependencies.yml
