[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "discord-webhook>=1.4.1",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pygithub>=2.9.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
