[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "discord-webhook>=1.4.1",
    "isort>=8.0.1",
    "mypy>=2.1.0",
    "pygithub>=2.9.1",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["src", "src_notifier"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing --cov-report=html -xv"

[tool.coverage.run]
branch = true
source = ["src"]
omit =[
    "**/tmp.py",
    "**/__init__.py"
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "^\\s+pass$",
]

[tool.ruff]
target-version = "py314"
line-length = 140
src = ["src"]

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade, ANN: flake8-annotations
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["UP045", "I001", "UP007"]

[tool.ruff.format]
quote-style = "single"
